Login Add money and cashout complete

--- a/index.html
+++ b/index.html
@@ -11,8 +11,44 @@
 
 <body>
 
-    <h1 class="text-red-600">ziufv </h1>
+    <div>
+        <div class="mockup-phone">
+            <div class="camera"></div>
+            <div class="display">
+                <div class="artboard artboard-demo phone-3">
+                    <!-- login form start -->
+                    <div class="hero bg-base-200 min-h-screen">
+                        <div class="hero-content flex-col lg:flex-row-reverse">
 
+                            <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                                <form class="card-body ">
+                                    <div class="form-control">
+                                        <label class="label">
+                                            <span class="label-text">Phone Number</span>
+                                        </label>
+                                        <input id="login-number" type="number" placeholder="phone number" class="input input-bordered"
+                                            required />
+                                    </div>
+                                    <div class="form-control">
+                                        <label class="label">
+                                            <span class="label-text">Pin Code</span>
+                                        </label>
+                                        <input id="login-pin" type="password" placeholder="pin code" class="input input-bordered"
+                                            required />
+                                    </div>
+                                    <div class="form-control mt-6">
+                                        <button id="login-button" class="btn btn-primary">Login</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="laybery.js"></script>
     <script src="programing.js"></script>
 </body>
 
